[package]
name = "colorful"
version = "0.1.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.0"
unquote = { git = "https://github.com/mqudsi/unquote" }
palette = { version = "0.5.0", default_features = false, features = [ "libm", "named" ] }
